# ciencia-datos

./: README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: index.html  search.json
docs/sesiones/notebooks_001_narrativa_uv_git/: 001_narrativa.html  002_miniconda_terminal.html  003_uv.html  004_git.html
docs/sesiones/notebooks_002_matplotlib_seaborn_plotly/: 000_Conoce_los_datos.html  001_matplotlib.html  002_Seaborn.html  003_plotly.html
docs/site_libs/bootstrap/: bootstrap-8c40e8074a9974d9bf841ec8793f006c.min.css  bootstrap-dark-c10af8267f2df204c1ca93a0fb2fa97c.min.css
sesiones/clase02_matplotlib/.ipynb_checkpoints/: 000_Conoce_los _datos-checkpoint.ipynb  001_Matplotlib-checkpoint.ipynb
sesiones/data/: ClimaLab_2023-10-27_2025-04-30.parquet
sesiones/notebooks_001_narrativa_uv_git/: 001_narrativa.qmd  002_miniconda_terminal.qmd  003_uv.qmd  004_git.qmd
sesiones/notebooks_002_matplotlib_seaborn_plotly/: 000_Conoce_los_datos.ipynb  003_plotly.ipynb
sesiones/notebooks_002_matplotlib_seaborn_plotly/.ipynb_checkpoints/: 001_matplotlib-checkpoint.ipynb
