[project]
name = "ciencia-datos-moderna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
]
